# svrg

./: CMakeLists.txt
src/candle/: frmmain.cpp  frmmain.h
src/candle/cam/: polygon_utils.h
src/candle/drawers/: meshdrawer.cpp  meshdrawer.h
src/candle/geometry/: mesh_importer.cpp  mesh_importer.h
src/candle/model/: toolpath.cpp  toolpath.h
tests/: CMakeLists.txt  test_mesh_import.cpp  test_mesh_validate.cpp  test_toolpath_basic.cpp
tests/data/: sample.stl
